--- a/core/gui/src/app/dashboard/component/user/user-dataset/user-dataset-explorer/user-dataset-staged-objects-list/user-dataset-staged-objects-list.component.scss
+++ b/core/gui/src/app/dashboard/component/user/user-dataset/user-dataset-explorer/user-dataset-staged-objects-list/user-dataset-staged-objects-list.component.scss
@@ -24,6 +24,10 @@
   overflow-x: auto; /* Prevents horizontal scrolling */
 }
 
+.custom-border-list {
+  border-bottom: 1px solid #f0f0f0;
+}
+
 .truncate-file-path {
   display: inline-block;
   max-width: 250px; /* Adjust width as needed */
