fix(ui): remove duplicate left sidebar border and extend to bottom of page (#3849)
### Purpose
This PR is related to #3741, which found inconsistent vertical divider
height across interface panels. This PR addresses the left sidebar
specifically.

### Changes
- Remove duplicate border on left sidebar
- Make left sidebar border reach bottom of page if page extends past
bottom of viewport

### Demonstration
Before: left sidebar border is duplicated and too short
<img width="1889" height="943"
alt="490342553-6f5d8ff5-5a9a-4548-b47e-5414a95ac705"
src="https://github.com/user-attachments/assets/0f1ddc24-78f4-4e5f-84be-09d5d3b703c0"
/>
After:
<img width="1710" height="989" alt="Screenshot 2025-10-10 at 4 03 46 PM"
src="https://github.com/user-attachments/assets/924d5c1d-56ac-4a99-a6c8-a7d2696c6435"
/>

Before: Gmail page: left sidebar border is too short
<img width="1906" height="1069"
alt="490342905-4aaf6236-7b34-4197-b467-c8540bcf4af2"
src="https://github.com/user-attachments/assets/dd052801-2e50-4d5a-af6d-8d3d6d7bdd78"
/>
After: extends to bottom
<img width="1710" height="989" alt="Screenshot 2025-10-10 at 4 04 06 PM"
src="https://github.com/user-attachments/assets/4df6f375-32e3-4c99-8529-b43edc47e4d5"
/>

---------

Co-authored-by: Xinyuan Lin <xinyual3@uci.edu>

--- a/core/gui/src/app/dashboard/component/dashboard.component.html
+++ b/core/gui/src/app/dashboard/component/dashboard.component.html
@@ -193,7 +193,7 @@
   </nz-sider>
 
   <div class="page-container">
-    <nz-layout>
+    <nz-layout class="page-content-layout">
       <div
         [hidden]="!displayNavbar"
         id="nav">
