feat(frontend): introduce dropdown menu for layers (#3898)
Introduce a dropdown menu to toggle different information layers in the
workflow.

Currently, we only have a grid layer. However, additional layers—such as
workers, regions, and even physical operators—will be added in the
future. The dropdown will allow users to turn that information on or off
easily.


![Animation2](https://github.com/user-attachments/assets/5ede5a30-a506-4940-af5a-034b74d1a172)

fix #3897

---------

Signed-off-by: Xinyuan Lin <xinyual3@uci.edu>

--- a/frontend/src/app/workspace/component/menu/menu.component.html
+++ b/frontend/src/app/workspace/component/menu/menu.component.html
@@ -145,6 +145,28 @@
       <ng-template #utilities>
         <nz-button-group>
           <button
+            nz-dropdown
+            [nzDropdownMenu]="menu"
+            [nzClickHide]="false"
+            nz-button
+            title="Layers">
+            <i
+              nz-icon
+              nzType="block"></i>
+          </button>
+          <nz-dropdown-menu #menu="nzDropdownMenu">
+            <ul nz-menu>
+              <li nz-menu-item>
+                <label
+                  nz-checkbox
+                  [(ngModel)]="grid"
+                  (ngModelChange)="onGridChange()"
+                  >Grid</label
+                >
+              </li>
+            </ul>
+          </nz-dropdown-menu>
+          <button
             (click)="onClickClosePanels()"
             nz-button
             title="close panels">
@@ -167,14 +189,6 @@
             <i
               nz-icon
               nzType="printer"></i>
-          </button>
-          <button
-            (click)="onClickToggleGrids()"
-            nz-button
-            title="Toggle Grids">
-            <i
-              nz-icon
-              nzType="border-outer"></i>
           </button>
           <button
             (click)="onClickRestoreZoomOffsetDefault()"
