--- a/frontend/src/app/workspace/component/power-button/computing-unit-selection.component.html
+++ b/frontend/src/app/workspace/component/power-button/computing-unit-selection.component.html
@@ -172,6 +172,16 @@
           </i>
           <i
             nz-icon
+            nzType="code"
+            nz-tooltip
+            *ngIf="unit.status === 'Running'"
+            [nzTooltipTitle]="'Open SSH Terminal'"
+            (click)="openSshTerminal(unit); $event.stopPropagation()"
+            role="button"
+            aria-label="Open SSH Terminal">
+          </i>
+          <i
+            nz-icon
             nzType="eye"
             nz-tooltip
             [nzTooltipTitle]="'Check details'"
@@ -427,3 +437,21 @@
     </div>
   </div>
 </ng-template>
+
+<!-- SSH Terminal Modal -->
+<nz-modal
+  [nzVisible]="sshModalVisible"
+  [nzTitle]="sshModalTitle"
+  [nzWidth]="900"
+  [nzFooter]="null"
+  [nzBodyStyle]="{'padding': '0', 'height': '600px'}"
+  (nzOnCancel)="closeSshTerminal()"
+  [nzMaskClosable]="false">
+  <ng-container *nzModalContent>
+    <iframe
+      [src]="terminalUrl"
+      class="ssh-terminal-iframe"
+      style="width: 100%; height: 600px; border: none;">
+    </iframe>
+  </ng-container>
+</nz-modal>
