--- a/frontend/src/app/workspace/component/power-button/computing-unit-selection.component.html
+++ b/frontend/src/app/workspace/component/power-button/computing-unit-selection.component.html
@@ -451,7 +451,7 @@
     <iframe
       [src]="terminalUrl"
       class="ssh-terminal-iframe"
-      style="width: 100%; height: 600px; border: none;">
+      style="width: 100%; height: 600px; border: none">
     </iframe>
   </ng-container>
 </nz-modal>
