feat(gui): show region layer on workflow editor (#3753)

--- a/frontend/src/app/workspace/component/menu/menu.component.html
+++ b/frontend/src/app/workspace/component/menu/menu.component.html
@@ -164,8 +164,14 @@
                   >Grid</label
                 >
               </li>
-            </ul>
-            <ul nz-menu>
+              <li nz-menu-item>
+                <label
+                  nz-checkbox
+                  [(ngModel)]="showRegion"
+                  (ngModelChange)="toggleRegion()"
+                  >Region</label
+                >
+              </li>
               <li nz-menu-item>
                 <label
                   nz-checkbox
