fix(frontend): Update labels in layer menu for clarity (#3958)
### What changes were proposed in this PR?
Fix some spelling for the string in the layer menu.

### How was this PR tested?
Tested with current test cases.

### Was this PR authored or co-authored using generative AI tooling?
No

Signed-off-by: Xinyuan Lin <xinyual3@uci.edu>

--- a/frontend/src/app/workspace/component/menu/menu.component.html
+++ b/frontend/src/app/workspace/component/menu/menu.component.html
@@ -169,7 +169,7 @@
                   nz-checkbox
                   [(ngModel)]="showRegion"
                   (ngModelChange)="toggleRegion()"
-                  >Region</label
+                  >Regions</label
                 >
               </li>
               <li nz-menu-item>
@@ -177,7 +177,7 @@
                   nz-checkbox
                   [(ngModel)]="showNumWorkers"
                   (ngModelChange)="toggleNumWorkers()"
-                  >#Workers</label
+                  >Workers</label
                 >
               </li>
             </ul>
