feat: introduce sort by activeness to admin dashboard (#3960)
### What changes were proposed in this PR?
In this PR we introduce a new sort feature to the avatar column in admin
dashboard. By clicking at the sort button right next to "Avatar" text,
admin user can view users who are active/inactive.

Reused the sort button from other columns. In case of ties, the original
order of the users is preserved.

Ascending Sorting (Active Users First):
<img width="812" height="659" alt="image"
src="https://github.com/user-attachments/assets/463b2aa1-7cb0-40d2-8b4a-aaa08452d473"
/>

Descending Sorting (Inactive Users First):
<img width="693" height="631" alt="image"
src="https://github.com/user-attachments/assets/d2468b47-b71f-43e0-a6e2-2d8801c1c7c4"
/>


### How was this PR tested?
Did not include test for this PR as it is about sorting users by
active/inactive.


### Was this PR authored or co-authored using generative AI tooling?
No.

--- a/frontend/src/app/dashboard/component/admin/user/admin-user.component.html
+++ b/frontend/src/app/dashboard/component/admin/user/admin-user.component.html
@@ -31,7 +31,11 @@
   [nzData]="listOfDisplayUser">
   <thead>
     <tr>
-      <th>Avatar</th>
+      <th
+        [nzSortFn]="sortByActive"
+        [nzSortDirections]="['ascend', 'descend']">
+        Avatar
+      </th>
       <th
         [nzSortFn]="sortByID"
         [nzSortDirections]="['ascend', 'descend']">
