add inconsistency panel

--- a/frontend/src/app/workspace/component/workflow-editor/context-menu/context-menu/context-menu.component.html
+++ b/frontend/src/app/workspace/component/workflow-editor/context-menu/context-menu/context-menu.component.html
@@ -166,6 +166,19 @@
   </li>
 
   <li
+    nz-menu-item
+    *ngIf="operatorMenuService.highlightedOperators.value.length === 1 &&
+  operatorMenuService.highlightedCommentBoxes.value.length === 0 &&
+  !hasHighlightedLinks()"
+    (click)="onAddToInconsistency()">
+    <span
+      nz-icon
+      nzType="warning"
+      nzTheme="outline"></span>
+    Add to Inconsistency
+  </li>
+
+  <li
     *ngIf="workflowResultExportService.hasResultToExportOnHighlightedOperators &&
            this.config.env.exportExecutionResultEnabled &&
            !hasHighlightedLinks()"
