add initial action lineage

--- a/frontend/src/app/workspace/component/workflow-editor/workflow-editor.component.html
+++ b/frontend/src/app/workspace/component/workflow-editor/workflow-editor.component.html
@@ -21,6 +21,7 @@
   <div
     id="workflow-editor"
     (contextmenu)="nzContextMenu.create($event, menu)"></div>
+  <texera-operator-response-panel></texera-operator-response-panel>
   <nz-dropdown-menu
     nzNoAnimation
     #menu="nzDropdownMenu">
