Revert "add initial action lineage"
This reverts commit e93c682d56b540a1959395995dd73a0501a01591.

--- a/frontend/src/app/workspace/component/left-panel/inconsistency-list/inconsistency-list.component.html
+++ b/frontend/src/app/workspace/component/left-panel/inconsistency-list/inconsistency-list.component.html
@@ -56,7 +56,7 @@
           [nzExtra]="extraTemplate"
           class="inconsistency-card"
           (click)="onInconsistencyClick(inconsistency)"
-          style="cursor: pointer">
+          style="cursor: pointer;">
           <p>{{ inconsistency.description }}</p>
           <p class="operator-id"><strong>Operator:</strong> {{ inconsistency.operatorId }}</p>
 
