--- a/frontend/src/app/workspace/component/workflow-editor/workflow-editor.component.html
+++ b/frontend/src/app/workspace/component/workflow-editor/workflow-editor.component.html
@@ -26,4 +26,12 @@
     #menu="nzDropdownMenu">
     <texera-context-menu></texera-context-menu>
   </nz-dropdown-menu>
+
+  <!-- Action Plan Feedback Panel -->
+  <texera-action-plan-feedback
+    *ngIf="showActionPlanFeedback"
+    [summary]="actionPlanSummary"
+    [left]="actionPlanPanelLeft"
+    [top]="actionPlanPanelTop">
+  </texera-action-plan-feedback>
 </div>
